# rpi-pico-simple-cli

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.env
app/: CMakeLists.txt  app.c
utils/: CMakeLists.txt  cli_parser.c  cli_parser.h
